Fix images overflowing the page - #17

--- a/static/css/news.less
+++ b/static/css/news.less
@@ -82,11 +82,6 @@
 
 .news-content {
   padding-top: 20px;
-
-  img {
-    max-width: 100%;
-    height: auto;
-  }
 }
 
 .responses {
